--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -1,1 +1,48 @@
+name: Cypress Tests
+
+# When to run this workflow
+on:
+  push:
+    branches: [ "main" ]    # Runs on push to main branch
+  pull_request:
+    branches: [ "main" ]    # Runs on PR to main branch
+
+jobs:
+  cypress-run:
+    runs-on: ubuntu-latest   # GitHub provides Linux VM
+
+    steps:
+      # Step 1: Checkout repo
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Step 2: Setup Node.js (Cypress runs on Node)
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      # Step 3: Install dependencies
+      - name: Install dependencies
+        run: npm install
+
+      # Step 4: Run Cypress tests
+      - name: Run Cypress tests
+        run: npx cypress run
+
+      # (Optional) Upload screenshots if tests fail
+      - name: Upload Cypress screenshots
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
+
+      # (Optional) Upload Cypress videos always
+      - name: Upload Cypress videos
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: cypress-videos
+          path: cypress/videos
 
