--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -28,7 +28,7 @@ jobs:
 
       # Step 4: Run Cypress tests
       - name: Run Cypress tests
-        run: npx cypress run
+        run: npx cypress run --spec "cypress/e2e/parabank/register.cy.js"
 
       # (Optional) Upload screenshots if tests fail
       - name: Upload Cypress screenshots
