Run entire project.yml

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -29,7 +29,8 @@ jobs:
 
       # Step 4: Run Cypress tests
       - name: Run Cypress tests
-        run: npx cypress run --spec "cypress/e2e/bill_pay.cy.js"
+        run: npx cypress run --spec "cypress/e2e/*"
+ 
 
       # (Optional) Upload screenshots if tests fail
       - name: Upload Cypress screenshots
