--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -29,7 +29,7 @@ jobs:
 
       # Step 4: Run Cypress tests
       - name: Run Cypress tests
-        run: npx cypress run --spec "cypress/e2e/*"
+        run: npx cypress run --spec "cypress/e2e/register.cy.js, cypress/e2e/login.cy.js, cypress/e2e/newaccount.cy.js, cypress/e2e/funds_transfer.cy.js,cypress/e2e/bill_pay.cy.js"
  
 
       # (Optional) Upload screenshots if tests fail
